--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </div>
 
     <div class="row g-2 mb-3">
-        <div class="col-md-6"><div class="card p-2"><h6 class="chart-label text-success">Matrix: สัดส่วนวิธีปฏิบัติแยกตามแผนกและ Moment</h6><div class="chart-container" style="height:300px;"><canvas id="matrixDeptChart"></canvas></div></div></div>
-        <div class="col-md-6"><div class="card p-2"><h6 class="chart-label text-info">Matrix: สัดส่วนวิธีปฏิบัติแยกตามวิชาชีพและ Moment</h6><div class="chart-container" style="height:300px;"><canvas id="matrixRoleChart"></canvas></div></div></div>
+        <div class="col-md-6"><div class="card p-2"><h6 class="chart-label text-success">Matrix: Compliance Rate แยกตามแผนกและ Moment (Grouped Bar)</h6><div class="chart-container" style="height:300px;"><canvas id="matrixDeptChart"></canvas></div></div></div>
+        <div class="col-md-6"><div class="card p-2"><h6 class="chart-label text-info">Matrix: Compliance Rate แยกตามวิชาชีพและ Moment (Grouped Bar)</h6><div class="chart-container" style="height:300px;"><canvas id="matrixRoleChart"></canvas></div></div></div>
     </div>
 
     <div class="text-end mb-4 no-print">
@@ -244,7 +244,7 @@
         renderMatrixTable(data); 
         renderMatrixRoleTable(data);
         
-        // เรียกใช้ฟังก์ชันกราฟ Stacked Bar
+        // เรียกใช้ฟังก์ชันกราฟ Grouped Bar
         drawMatrixGroupChart(data, 'dept', 'matrixDeptChart');
         drawMatrixGroupChart(data, 'role', 'matrixRoleChart');
     }
@@ -255,48 +255,37 @@
     function drawTrend(data) { if(charts.trend) charts.trend.destroy(); const monthlyData = {}; database.forEach(d => { if(!d.obsDate) return; const month = d.obsDate.substring(0, 7); if(!monthlyData[month]) monthlyData[month] = { pass: 0, total: 0 }; d.m.forEach(v => { monthlyData[month].total++; if(v === 'HW' || v === 'HR') monthlyData[month].pass++; }); }); const labels = Object.keys(monthlyData).sort(); charts.trend = new Chart(document.getElementById('trendChart'), { type: 'line', data: { labels: labels, datasets: [{ label: 'Trend (%)', data: labels.map(l => ((monthlyData[l].pass / monthlyData[l].total) * 100).toFixed(1)), borderColor: '#1d976c', fill: true, backgroundColor: 'rgba(29, 151, 108, 0.1)', tension: 0.3 }] }, options: { maintainAspectRatio: false, scales: { y: { beginAtZero: true, max: 100 } } } }); }
     function drawEquipDeptChart(data) { if(charts.equip) charts.equip.destroy(); const depts = [...new Set(data.map(d => d.dept))]; const scores = depts.map(dn => { let f = data.filter(d => d.dept === dn); let totalPos = f.length * 7; let actual = f.reduce((acc, curr) => acc + curr.equips.reduce((a, b) => a + b, 0), 0); return ((actual / totalPos) * 100).toFixed(1); }); charts.equip = new Chart(document.getElementById('equipDeptChart'), { type: 'bar', data: { labels: depts, datasets: [{ label: 'อุปกรณ์ (%)', data: scores, backgroundColor: '#f39c12' }] }, options: { maintainAspectRatio: false, scales: { y: { beginAtZero: true, max: 100 } } } }); }
 
-    // ฟังก์ชันสร้างกราฟ Matrix แบบ Stacked Bar Chart
+    // ฟังก์ชันสร้างกราฟ Matrix แบบ Grouped Bar Chart (Compliance Rate % HW+HR)
     function drawMatrixGroupChart(data, field, canvasId) {
         if(charts[canvasId]) charts[canvasId].destroy();
         const groups = [...new Set(data.map(d => d[field]))].sort();
         const moments = ["M1", "M2", "M3", "M4", "M5"];
-        const behaviorMeta = [
-            { key: 'HW', label: 'HW', color: '#2ecc71' },
-            { key: 'HR', label: 'HR', color: '#3498db' },
-            { key: 'Glove', label: 'ถุงมือ', color: '#f1c40f' },
-            { key: 'None', label: 'ไม่ล้าง', color: '#e74c3c' }
-        ];
-
-        // สร้าง Labels (แกน X คือกลุ่ม เช่น แผนก หรือ วิชาชีพ)
-        const labels = groups;
-
-        // คำนวณข้อมูลสะสมสำหรับแต่ละ Moment
-        // ในที่นี้จะแสดงเป็น % เฉลี่ยของทุก Moment รวมกันในแต่ละกลุ่มเพื่อความชัดเจน
-        const datasets = behaviorMeta.map(beh => {
+        const colors = ['#1abc9c', '#3498db', '#9b59b6', '#f1c40f', '#e67e22'];
+        
+        // datasets คือ Moments (แต่ละกลุ่มแผนกจะมี 5 แท่ง)
+        const datasets = moments.map((m, mIdx) => {
             return {
-                label: beh.label,
-                backgroundColor: beh.color,
+                label: m,
+                backgroundColor: colors[mIdx],
                 data: groups.map(g => {
                     let f = data.filter(d => d[field] === g);
-                    let totalObs = f.length * 5;
-                    let count = f.reduce((acc, curr) => acc + curr.m.filter(v => v === beh.key).length, 0);
-                    return ((count / totalObs) * 100).toFixed(1);
+                    let pass = f.filter(d => d.m && (d.m[mIdx] === 'HW' || d.m[mIdx] === 'HR')).length;
+                    return ((pass / f.length) * 100).toFixed(1);
                 })
             };
         });
 
         charts[canvasId] = new Chart(document.getElementById(canvasId), {
             type: 'bar',
-            data: { labels: labels, datasets: datasets },
+            data: { labels: groups, datasets: datasets },
             options: {
                 responsive: true,
                 maintainAspectRatio: false,
                 scales: {
-                    x: { stacked: true },
-                    y: { stacked: true, beginAtZero: true, max: 100, title: { display: true, text: 'Proportion (%)' } }
+                    y: { beginAtZero: true, max: 100, title: { display: true, text: 'Compliance (%)' } }
                 },
                 plugins: {
-                    legend: { position: 'bottom', labels: { boxWidth: 10, font: { size: 9 } } },
+                    legend: { position: 'bottom', labels: { boxWidth: 12, font: { size: 10 } } },
                     tooltip: { callbacks: { label: (ctx) => `${ctx.dataset.label}: ${ctx.raw}%` } }
                 }
             }
